[tool.poetry]
name = "py-objects"
version = "0.0.4"
description = "Better Than Enums"
authors = ["Ofer Nave <odigity@gmail.com>"]
readme = "README.md"
repository = "https://github.com/odigity/py-objects/"
documentation = "https://py-objects.readthedocs.io/en/latest/"
changelog = "https://github.com/odigity/py-objects/blob/master/CHANGELOG.md"
packages = [{include = "objects"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
